# Nvidia-Financials-Reports-Using-AI-Agentic-Architecture

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.toml  main.py  nvidia_search.json  pinecone-test.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
Rag_Agents/: litellm_query_generator.py  rag_pinecone.py
WebAgent/: nvidia_search_agent.py
agents/: rag_agent.py  snowflake_agent.py  websearch_agent.py
langGraph/: pipeline.py
langgraph_pipeline.py/: pipeline.py
utils/: pinecone_utils.py
