[project]
name = "rag-pipeline-airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "shushil girish",email = "girish.sh@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "selenium (>=4.0.0)",
    "webdriver-manager (>=3.8.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.10.6,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "chunking-evaluation @ git+https://github.com/brandonstarxel/chunking_evaluation.git",
    "matplotlib (>=3.10.1,<4.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "litellm (>=1.63.12,<2.0.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "serpapi (>=0.1.5,<0.2.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-core (>=0.3.48,<0.4.0)",
    "openai (>=1.68.2,<2.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "snowflake-connector-python (>=3.14.0,<4.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "langchain-openai (>=0.3.10,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
